intel/bench_214_new/extr_.FFmpeglibavfiltervf_spp.c_store_slice_c_with_main/log.txt
bench_214_new/extr_.FFmpeglibavfiltervf_spp.c_store_slice_c_with_main/extr_.FFmpeglibavfiltervf_spp.c_store_slice_c_with_main.c:55:30: error: brackets are not allowed here; to declare an array, place the brackets after the name
  const uint8_t [8][8] dither;
                ~~~~~~~      ^
                             [8][8]
bench_214_new/extr_.FFmpeglibavfiltervf_spp.c_store_slice_c_with_main/extr_.FFmpeglibavfiltervf_spp.c_store_slice_c_with_main.c:55:24: error: default initialization of an object of const type 'const uint8_t [8][8]'
  const uint8_t [8][8] dither;
                       ^
2 errors generated.
HLS FPGA Parse FAILED.
